# ic-assignment

./: .gitignore  Cargo.toml  README.md  build_install.sh  dfx.json  package.json
src/assignment_mo/: Main.mo
src/assignment_rs/: lib.rs
src/http-client-oracle/: Cargo.toml
src/http-client-oracle/src/: dfx_service.rs  lib.rs
src/http-client-oracle/src/models/: request.rs
src/queue_mo/: Main.mo  types.mo
src/queue_rs/: Cargo.toml  lib.rs  queue.did
