[package]
name = "http-client-oracle"
version = "0.1.0"
authors = ["joshbenaron <73971531+joshbenaron@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
tokio = { version = "1.6.0", features = ["rt-multi-thread"] }