[package]
name = "http-client-oracle"
version = "0.1.0"
authors = ["joshbenaron <73971531+joshbenaron@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
awc = "2.0.3"

[lib]
crate-type = ["cdylib"]